Fix transform scale for navigation link hover effect to ensure visibility

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -374,7 +374,7 @@
 
             &:before {
                 display: block !important;
-                transform: scaleX(0) !important;
+                transform: scaleX(1) !important;
             }
         }
     }
